# serf

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
argparse/: CMakeLists.txt  argparse.cpp  argparse.hpp
cmake/: Cache.cmake  CompileCommands.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  IncludeFiles.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  SetBuildTypeProperties.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
lib/: CMakeLists.txt  check.cpp  check.hpp  clone.hpp  common_types.hpp  decode_error.cpp  decode_error.hpp  decode_klass.cpp  decode_klass.hpp  exceptions.hpp  fs.hpp  fscall.hpp  git.hpp  git_exception.cpp  git_exception.hpp  gitpac.cpp  gitpac.hpp  init.hpp  package.hpp  repo.cpp  repo.hpp  status.hpp  url.hpp
src/: CMakeLists.txt  arghandler.cpp  arghandler.hpp  compile_commands.json  main.cpp
test/: CMakeLists.txt  arghandler_test.cpp  argparse_test.cpp  serf_packages.json
zip_iterator/: zip.hpp
